--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "version": "1.0.0",
     "require": {
         "phpunit/phpunit": "9.5.18",
-        "ext-dom": "*"
+        "ext-dom": "*",
+        "ext-pdo": "*"
     }
 }
