--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "psr-4": {
             "Avocado\\": "src/",
             "Avocado\\ORM\\": "src/AvocadoORM/",
-            "Avocado\\Router\\": "src/AvocadoRouter/"
+            "Avocado\\Router\\": "src/AvocadoRouter/",
+            "Avocado\\AvocadoView\\": "src/AvocadoView/"
         }
     },
     "license": "Apache-2.0",
