--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Avocado is hobbyist PHP framework which implements routing and ORM",
     "autoload": {
         "classmap": [
-            "src"
+            "src", "vendor"
         ],
         "psr-4": {
             "Avocado\\": "src/",
