--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,10 @@
     "homepage": "https://avocadoframework.com",
     "version": "2.0.0",
     "require": {
-        "phpunit/phpunit": "9.5.18",
         "ext-dom": "*",
         "ext-pdo": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9.5.18"
     }
 }
