--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,13 @@
     ],
     "minimum-stability": "stable",
     "homepage": "https://avocadoframework.com",
-    "version": "2.0.2",
+    "version": "2.2.0",
     "require": {
         "ext-dom": "*",
         "ext-pdo": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.5.18"
+        "phpunit/phpunit": "9.5.18",
+        "phpstan/phpstan": "^1.7"
     }
 }
