--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "version": "2.2.1",
     "require": {
         "ext-dom": "*",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "php": "8.1"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.18",
