--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require": {
         "ext-dom": "*",
         "ext-pdo": "*",
-        "php": "8.1"
+        "php": "8.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.18",
