--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "require": {
         "ext-dom": "*",
         "ext-pdo": "*",
-        "php": "8.1.*"
+        "php": "8.1.*",
+        "kcs/class-finder": "^0.3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.18",
