--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "ext-dom": "*",
         "ext-pdo": "*",
         "php": "8.1.*",
-        "kcs/class-finder": "^0.3.1"
+        "kcs/class-finder": "^0.3.1",
+        "symfony/yaml": "v6.2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.18",
