Added routes matching strategies by $_SERVER['PHP_SELF'] and $_SERVER['REQUEST_URI'] global variables

--- a/tests/application/mock/application.yaml
+++ b/tests/application/mock/application.yaml
@@ -8,6 +8,9 @@ mocked-configuration:
   testArray:
     - test
     - test2
-  avocado:
-    environment: DEVELOPMENT
+avocado:
+  router:
+    matchingStrategy: SELF
+  environment:
+    type: DEVELOPMENT
     throws: false
