--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "ext-dom": "*",
         "ext-pdo": "*",
         "php": "8.1.*",
-        "kcs/class-finder": "^0.3.1",
-        "symfony/yaml": "v6.2.2"
+        "nette/robot-loader": "^3.4"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.18",
