--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "ext-dom": "*",
         "ext-pdo": "*",
         "php": "8.1.*",
-        "nette/robot-loader": "^3.4"
+        "nette/robot-loader": "^3.4",
+        "symplely/yaml": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.18",
