--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.18",
-        "phpstan/phpstan": "^1.7"
+        "phpstan/phpstan": "1.9.14"
     }
 }
