--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,13 @@
     "require": {
         "ext-dom": "*",
         "ext-pdo": "*",
-        "php": "8.1.*",
+        "php": ">=8.1",
         "nette/robot-loader": "^3.4",
         "symplely/yaml": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.18",
-        "phpstan/phpstan": "1.9.14"
+        "phpstan/phpstan": "1.9.14",
+        "hubert/avocado-mysql-driver": "v2.0.0"
     }
 }
