--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "php": ">=8.1",
     "nette/robot-loader": "^3.4",
     "symplely/yaml": "^1.0",
-    "guzzlehttp/guzzle": "^7.0"
+    "guzzlehttp/guzzle": "^7.0",
+    "phpfastcache/phpfastcache": "^9.1"
   },
   "require-dev": {
     "phpunit/phpunit": "9.5.18",
