--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 .phpunit.result.cache
 Avocado.iml
 /.idea/
-/tests/application/mock/cache/
+/tests/application/mock/cache/*
+/tests/cacheTest/mock/cache/*
